# niobium-haze

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .lsan_suppressions  .scanoss-curations.json  CLAUDE.md  CMakeLists.txt  FHETCH_IR_REFERENCE.md  Makefile  NOTICE  README.md  flake.nix  style.md
.github/instructions/: CODE_REVIEW_GUIDE.md
.github/workflows/: build-matrix.yml  build-test.yml  clang-format.yml  dispatch-to-niobium-client.yml  flake-check.yml  openfhe-bump.yml  pr-claude-code-review.yml  scanoss.yml
.zed/: settings.json
cmake/: check_symbol_leak.cmake
docs/: lazy_shadow_flake.md
include/haze/: haze.h  haze_types.h
include/haze/cxx/: error.hpp  handles.hpp  hash.hpp  haze.hpp  kernel.hpp  ops.hpp  roles.hpp
linker/: haze_exports.map  haze_exports.sym
replay_bridge/: CMakeLists.txt  README.md
replay_bridge/include/haze/: replay_bridge.h  replay_bridge.hpp  replay_bridge_cc.hpp
replay_bridge/src/: openfhe_template.cpp
scripts/: check_symbol_leak.sh  clang-format.sh  clang-tidy.sh  clangd-check.sh  local-pr-review.sh  sync-fhetch-rev.sh  sync-openfhe-stock-rev.sh  test_haze_integration.sh  test_haze_integration_standalone.sh  test_readme_examples.sh  trace-diff.sh  zed-clangd.sh
src/: haze_allocator.cpp  haze_allocator.hpp  haze_backend.cpp  haze_backend.hpp  haze_basis_convert.cpp  haze_basis_convert.hpp  haze_basis_convert_api.cpp  haze_compute.cpp  haze_compute.hpp  haze_compute_api.cpp  haze_config.cpp  haze_config.hpp  haze_config_api.cpp  haze_device.cpp  haze_device.hpp  haze_device_api.cpp  haze_epoch.cpp  haze_epoch.hpp  haze_error.cpp  haze_errors.cpp  haze_errors.hpp  haze_handle.hpp  haze_internal.hpp  haze_lifecycle.cpp  haze_materialize.cpp  haze_memory.cpp  haze_memory_api.cpp  haze_polynomial_io.cpp  haze_polynomial_io.hpp  haze_stream.cpp  haze_stream.hpp  haze_stream_api.cpp  haze_thread_safety.hpp
src/api/: basis_convert.cpp  compute.cpp  config.cpp  context.cpp  device.cpp  error.cpp  graph.cpp  kernel.cpp  lifecycle.cpp  memory.cpp  stream.cpp
src/common/: errors.cpp  errors.hpp  handle.hpp  log.cpp  log.hpp  thread_safety.hpp
src/core/: allocator.cpp  allocator.hpp  backend.cpp  backend.hpp  basis_convert.cpp  basis_convert.hpp  compute.hpp  config.cpp  config.hpp  context.cpp  context.hpp  context_fwd.hpp  device.cpp  device.hpp  device_state.cpp  device_state.hpp  epoch.cpp  epoch.hpp  graph.cpp  graph.hpp  kernel_cache.cpp  kernel_cache.hpp  lower.cpp  lower.hpp  lowering_session.cpp  lowering_session.hpp  materialize.cpp  mrp_polymap.cpp  mrp_polymap.hpp  mrp_registry.cpp  mrp_registry.hpp  polynomial_io.cpp  polynomial_io.hpp  record.cpp  record.hpp  stream.cpp  stream.hpp
test/: allocator_test_access.hpp  format_test.cpp  integration_helpers.hpp  integration_introspect.hpp  mod_arith_ref.hpp  openfhe_key_extract.hpp  test_basis_convert.cpp  test_bridge_key_extract.cpp  test_build.cpp  test_compute.cpp  test_config.cpp  test_d2d_copy.cpp  test_hardware_format.cpp  test_integration_helpers.cpp  test_invariant_regressions.cpp  test_kernel_memo.cpp  test_memory.cpp  test_mrp_group_reuse.cpp  test_mrp_registry.cpp  test_mul_rotation.cpp  test_replay_bridge_program_dir.cpp  test_ring_dim_consistency.cpp  test_tape.cpp  test_threaded_record.cpp  test_threaded_replay.cpp  test_user_crypto_context.cpp  test_zero_copy_promotion.cpp
test/coexistence/: CMakeLists.txt  test_coexistence.cpp
test/cxx/: floor20_check.cpp  test_kernel_guards.cpp
test/e2e/: README.md  bootstrap.cpp  bootstrap.hpp  bootstrap_eval_mod.cpp  bootstrap_keys.cpp  bootstrap_linear_transform.cpp  bootstrap_mod_raise.cpp  ops.cpp  ops.hpp  scaling_modes.hpp  test_basic_operations_sequential_e2e.cpp  test_emit_fpga_project.cpp  test_kernel_memo_two_keysets_e2e.cpp  test_openfhe_addition_e2e.cpp  test_openfhe_bootstrap_e2e.cpp  test_openfhe_mul_e2e.cpp  test_openfhe_mul_no_relin_e2e.cpp  test_openfhe_rotate_e2e.cpp  test_openfhe_scalar_mult_e2e.cpp  test_openfhe_sub_e2e.cpp  test_ops_ctx_params_e2e.cpp
test/e2e/public/: test_cxx_simple_program.cpp  test_interleave.cpp  test_simple_program.cpp
tsan-build/runs/haze/: fhetch_replay.json  fhetch_replay_outputs.json  haze.fhetch  haze.inputs.json  haze.outputs.json
